--- a/COMP4537/labs/5/vercel.json
+++ b/COMP4537/labs/5/vercel.json
@@ -1,5 +1,15 @@
 {
   "version": 2,
   "builds": [{ "src": "server.js", "use": "@vercel/node" }],
-  "routes": [{ "src": "/.*", "dest": "/server.js" }]
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "Content-Security-Policy",
+          "value": "default-src 'self' https://lab5-dyvvy02jo-oceaans-projects.vercel.app; connect-src *"
+        }
+      ]
+    }
+  ]
 }
